Creato con Colab

--- a/Dribbling_Prediction.ipynb
+++ b/Dribbling_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTv5bBQfzRDbrk9RIiDmgw",
+      "authorship_tag": "ABX9TyNE58mgk1Z7g1TQgP4u/CGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1167,6 +1167,7 @@
       "cell_type": "markdown",
       "source": [
         "Dataset Description:\n",
+        "1. **Unnamed: 0** : observation number\n",
         "1.   **game_id** : identifiction number associated to the match\n",
         "2.   **player_id** : identification number of the player\n",
         "3.  **team_id** : identification number of the team\n",
